# heracleum-tox-mcp-server

./: .env.example  .gitignore  COSCIENTIST_INTEGRATION.md  Dockerfile  Dockerfile.coscientist  README.md  REPRODUCTION_QUESTIONS.md  build_dataset.py  docker-compose.yml  parse_supplementary.py  prepare_models.py  pyproject.toml  rag_registration.json  reproduce_paper.py
server/: __init__.py  artifacts.py  chemistry.py  claims.py  clustering.py  config.py  data_sources.py  dataset.py  heracleum_server.py  models.py  plotting.py  science.py  synthesis.py
server/data/: heracleum_metabolites.csv  names_cache.csv  supplementary_smiles.csv
tests/: test_reproduction.py
