[project]
name = "heracleum-tox-mcp-server"
version = "0.1.0"
description = "MCP server reproducing Rassabina & Fedorov 2025 (in-silico toxicology of Heracleum sosnowskyi metabolites) with open-source analogues of the Syntelly platform"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastmcp>=2.14.5",
    "pydantic-settings>=2.0",
    "rdkit>=2024.3",
    "numpy>=1.26",
    "pandas>=2.0",
    "scipy>=1.11",
    "scikit-learn>=1.3",
    "catboost>=1.2",
    "xgboost>=2.0",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "pubchempy>=1.0",
    "requests>=2.31",
    "boto3>=1.34",
    # PyTDC (open toxicity datasets) is installed separately with --no-deps because it
    # pins the deprecated rdkit-pypi (cp311-only) which conflicts with modern rdkit on
    # Python 3.12. Its data-download path only needs the libs below, which we already pull in.
    "tqdm>=4.66",
    "fuzzywuzzy>=0.18",
    "dataclass-wizard>=0.22",
    "huggingface-hub>=0.20",
    "setuptools<80",            # PyTDC imports pkg_resources, dropped in setuptools>=81
]

[dependency-groups]
dev = ["pytest>=8"]

[project.scripts]
heracleum-tox-mcp-server = "server.heracleum_server:main"

[tool.hatch.build.targets.wheel]
packages = ["server"]

[tool.hatch.build.targets.wheel.force-include]
"server/data/heracleum_metabolites.csv" = "server/data/heracleum_metabolites.csv"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
markers = [
    "slow: long-running reproduction tests (model training, t-SNE)",
    "network: tests that require network access (PubChem / TDC downloads)",
]
